<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/picnicPlannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/picnic_planner_title"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shopTypeHeading"
            style="@style/MenuSubheading"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/picnic_planner_shop_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picnicPlannerTitle" />

        <CheckBox
            android:id="@+id/plannerWantsDrinks"
            style="@style/MenuCheckbox"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/drinks_checkbox_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopTypeHeading" />

        <CheckBox
            android:id="@+id/plannerWantsFood"
            style="@style/MenuCheckbox"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/food_checkbox_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plannerWantsDrinks" />

        <TextView
            android:id="@+id/plannerOpeningHoursHeading"
            style="@style/MenuSubheading"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/picnic_planner_opening_hours_spinner_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plannerWantsFood" />


        <Spinner
            android:id="@+id/openingHoursSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorText"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plannerOpeningHoursHeading" />

        <TextView
            android:id="@+id/plannerRouteOptionsHeading"
            style="@style/MenuSubheading"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/picnic_planner_route_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openingHoursSpinner" />

        <CheckBox
            android:id="@+id/plannerShowRouteCheckbox"
            style="@style/MenuCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/route_checkbox_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plannerRouteOptionsHeading" />

        <TextView
            android:id="@+id/plannerStartPointText"
            style="@style/MenuSubheading"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/picnic_planner_start_point_textview_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plannerShowRouteCheckbox" />

        <RadioGroup
            android:id="@+id/startPointRadioGroup"
            style="@style/MenuRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/startPointCurrentLocationRadio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plannerStartPointText">

            <RadioButton
                android:id="@+id/startPointCurrentLocationRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_current_location" />

            <RadioButton
                android:id="@+id/startPointNoStartPointRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:checked="false"
                android:text="@string/radio_no_start_point" />

            <RadioButton
                android:id="@+id/startPointChooseLocationRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_choose_location" />
        </RadioGroup>

        <TextView
            android:id="@+id/plannerDestinationText"
            style="@style/MenuSubheading"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/picnic_planner_destination_textview_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPointRadioGroup" />

        <RadioGroup
            android:id="@+id/destinationRadioGroup"
            style="@style/MenuRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/destinationClosestParkRadio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plannerDestinationText">

            <RadioButton
                android:id="@+id/destinationClosestParkRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_closest_park" />

            <RadioButton
                android:id="@+id/destinationChooseParkRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_choose_park" />

            <RadioButton
                android:id="@+id/destinationChooseLocationRadio"
                style="@style/MenuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_choose_location" />
        </RadioGroup>

        <Button
            android:id="@+id/plannerPlanItButton"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/picnic_planner_plan_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationRadioGroup" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/plannerStartPointText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plannerShowRouteCheckbox"
            app:layout_constraintTop_toBottomOf="@+id/plannerRouteOptionsHeading"
            app:srcCompat="@drawable/powered_by_google_dark" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>